# craft_hr

./: pyproject.toml
.github/workflows/: ci.yml
craft_hr/: hooks.py  modules.txt
craft_hr/accommodation/doctype/accommodation/: accommodation.js  accommodation.json  accommodation.py  test_accommodation.py
craft_hr/accommodation/doctype/accommodation_details/: accommodation_details.py
craft_hr/accommodation/doctype/accommodation_transfer_form/: accommodation_transfer_form.js  accommodation_transfer_form.json  accommodation_transfer_form.py  test_accommodation_transfer_form.py
craft_hr/accommodation/doctype/accommodation_transfer_item/: accommodation_transfer_item.py
craft_hr/accommodation/doctype/activity/: activity.py
craft_hr/accommodation/doctype/bed/: bed.js  bed.json  bed.py  test_bed.py
craft_hr/accommodation/doctype/building/: building.js  building.py  test_building.py
craft_hr/accommodation/doctype/floor/: floor.js  floor.json  floor.py  test_floor.py
craft_hr/accommodation/doctype/room/: room.js  room.json  room.py  test_room.py
craft_hr/craft_hr/doctype/asset_details/: asset_details.json  asset_details.py
craft_hr/craft_hr/doctype/asset_issuance/: asset_issuance.js  (+3 more)
craft_hr/events/: attendance.py  employee_promotion.py  get_leaves.py  leave_allocation.py  leave_application.py  salary_structure_assignment.py  shift_type.py
craft_hr/fixtures/: custom_field.json  property_setter.json
craft_hr/overrides/: leave_encashment.py
craft_hr/public/js/: employee_promotion.js  leave_allocation.js  leave_application.js
craft_hr/tasks/: daily.py
(+394 files in other folders)
